--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Score Board</title>
     <script>
-      // Apply theme immediately before React loads to prevent flash
+
       (function() {
         const theme = localStorage.getItem('vite-ui-theme') || 'dark';
         const root = document.documentElement;
